# support_bot

./: .dockerignore  .env.example  .gitattributes  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 20260419_0001_initial.py
docker/api/: Dockerfile
docker/bot/: Dockerfile
scripts/: run_api.py  run_bot.py
src/support_bot/: __init__.py  config.py
src/support_bot/api/: __init__.py  deps.py  main.py
src/support_bot/api/routers/: __init__.py  tickets.py  users.py
src/support_bot/api/schemas/: __init__.py  tickets.py  users.py
src/support_bot/api/services/: __init__.py  ticket_service.py
src/support_bot/bot/: __init__.py  api_client.py  keyboards.py  main.py  states.py  storage.py
src/support_bot/bot/handlers/: __init__.py  admin.py  user.py
src/support_bot/bot/middlewares/: __init__.py  api_inject.py
src/support_bot/db/: __init__.py  session.py
src/support_bot/db/models/: __init__.py  admin_message_map.py  message.py  ticket.py  user.py
